; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ee/extr_ee.c_leave_op.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ee/extr_ee.c_leave_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@text_changes = common dso_local global i64 0, align 8
@leave_menu = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @leave_op() #0 {
  %1 = load i64, i64* @text_changes, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @leave_menu, align 4
  %5 = call i32 @menu_op(i32 %4)
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @TRUE, align 4
  %8 = call i32 @quit(i32 %7)
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i32 @menu_op(i32) #1

declare dso_local i32 @quit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
